feat: add UICollection page and Button component with various styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 body {
+  @apply bg-gray-900;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
