--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,18 @@
 
 @layer base {
   [type="radio"] {
-    @apply appearance-none size-4 border border-gray-800 rounded-full bg-transparent transition duration-300 ease-in-out;
+    @apply appearance-none size-4 border border-gray-700/70 rounded-full bg-transparent transition duration-300 ease-in-out;
   }
 
   [type="radio"]:checked {
+    @apply bg-indigo-500 border-gray-900 border-2 outline-2 outline-indigo-500 transition-all duration-300 ease-in-out;
+  }
+
+  [type="checkbox"] {
+    @apply appearance-none size-4 border border-gray-700/70 rounded-sm bg-transparent transition duration-300 ease-in-out;
+  }
+
+  [type="checkbox"]:checked {
     @apply bg-indigo-500 border-gray-900 border-2 outline-2 outline-indigo-500 transition-all duration-300 ease-in-out;
   }
 }
